--- a/about.html
+++ b/about.html
@@ -9,7 +9,7 @@
     <meta name="author" content="TemplateMo">
     <link href="https://fonts.googleapis.com/css?family=Poppins:100,200,300,400,500,600,700,800,900&display=swap" rel="stylesheet">
 
-    <title>Finance Business - About Page</title>
+    <title>Influence Capital - About Page</title>
 
     <!-- Bootstrap core CSS -->
     <link href="vendor/bootstrap/css/bootstrap.min.css" rel="stylesheet">
@@ -115,8 +115,8 @@ https://templatemo.com/tm-545-finance-business
                   <div class="right-content">
                     <span>our solid background on finance</span>
                     <h2>Get to know about <em>our company</em></h2>
-                    <p>Fusce nec ultrices lectus. Duis nec scelerisque risus. Ut id tempor turpis, ac dignissim ipsum. Nulla ullamcorper, ipsum vel condimentum congue, mi odio vehicula tellus, sit amet malesuada justo sem. 
-                    <br><br>Pellentesque in sagittis lacus, vel auctor sem. Quisque eu quam eleifend, ullamcorper dui nec, luctus quam.</p>
+                    <!-- <p>Fusce nec ultrices lectus. Duis nec scelerisque risus. Ut id tempor turpis, ac dignissim ipsum. Nulla ullamcorper, ipsum vel condimentum congue, mi odio vehicula tellus, sit amet malesuada justo sem. 
+                    <br><br>Pellentesque in sagittis lacus, vel auctor sem. Quisque eu quam eleifend, ullamcorper dui nec, luctus quam.</p> -->
                     <a href="" class="filled-button">Read More</a>
                   </div>
                 </div>
@@ -138,7 +138,7 @@ https://templatemo.com/tm-545-finance-business
           <div class="col-md-12">
             <div class="section-heading">
               <h2>Our team <em>members</em></h2>
-              <span>Suspendisse a ante in neque iaculis lacinia</span>
+              <!-- <span>Suspendisse a ante in neque iaculis lacinia</span> -->
             </div>
           </div>
           <div class="col-md-4">
@@ -147,7 +147,7 @@ https://templatemo.com/tm-545-finance-business
               <div class="down-content">
                 <h4>William Smith</h4>
                 <span>Co-Founder</span>
-                <p>In sem sem, dapibus non lacus auctor, ornare sollicitudin lacus. Aliquam ipsum urna, semper quis.</p>
+               <!--  <p>In sem sem, dapibus non lacus auctor, ornare sollicitudin lacus. Aliquam ipsum urna, semper quis.</p> -->
               </div>
             </div>
           </div>
@@ -157,7 +157,7 @@ https://templatemo.com/tm-545-finance-business
               <div class="down-content">
                 <h4>Mary Houston</h4>
                 <span>Chief Marketing Officer</span>
-                <p>In sem sem, dapibus non lacus auctor, ornare sollicitudin lacus. Aliquam ipsum urna, semper quis.</p>
+                <!-- <p>In sem sem, dapibus non lacus auctor, ornare sollicitudin lacus. Aliquam ipsum urna, semper quis.</p> -->
               </div>
             </div>
           </div>
@@ -167,7 +167,7 @@ https://templatemo.com/tm-545-finance-business
               <div class="down-content">
                 <h4>Paul Walker</h4>
                 <span>Financial Analyst</span>
-                <p>In sem sem, dapibus non lacus auctor, ornare sollicitudin lacus. Aliquam ipsum urna, semper quis.</p>
+                <!-- <p>In sem sem, dapibus non lacus auctor, ornare sollicitudin lacus. Aliquam ipsum urna, semper quis.</p> -->
               </div>
             </div>
           </div>
@@ -180,14 +180,14 @@ https://templatemo.com/tm-545-finance-business
         <div class="row">
           <div class="col-md-6">
             <div class="left-content">
-              <span>Lorem ipsum dolor sit amet</span>
+              <!-- <span>Lorem ipsum dolor sit amet</span> -->
               <h2>Our solutions for your <em>business growth</em></h2>
-              <p>Pellentesque ultrices at turpis in vestibulum. Aenean pretium elit nec congue elementum. Nulla luctus laoreet porta. Maecenas at nisi tempus, porta metus vitae, faucibus augue. 
-              <br><br>Fusce et venenatis ex. Quisque varius, velit quis dictum sagittis, odio velit molestie nunc, ut posuere ante tortor ut neque.</p>
+              <!-- <p>Pellentesque ultrices at turpis in vestibulum. Aenean pretium elit nec congue elementum. Nulla luctus laoreet porta. Maecenas at nisi tempus, porta metus vitae, faucibus augue. 
+              <br><br>Fusce et venenatis ex. Quisque varius, velit quis dictum sagittis, odio velit molestie nunc, ut posuere ante tortor ut neque.</p> -->
               <a href="" class="filled-button">Read More</a>
             </div>
           </div>
-          <div class="col-md-6 align-self-center">
+          <!-- <div class="col-md-6 align-self-center">
             <div class="row">
               <div class="col-md-6">
                 <div class="count-area-content">
@@ -214,12 +214,12 @@ https://templatemo.com/tm-545-finance-business
                 </div>
               </div>
             </div>
-          </div>
+          </div> -->
         </div>
       </div>
     </div>
 
-    <div class="testimonials">
+    <!-- <div class="testimonials">
       <div class="container">
         <div class="row">
           <div class="col-md-12">
@@ -271,7 +271,7 @@ https://templatemo.com/tm-545-finance-business
           </div>
         </div>
       </div>
-    </div>
+    </div> -->
 
     <!-- Footer Starts Here -->
     <footer>
@@ -279,7 +279,7 @@ https://templatemo.com/tm-545-finance-business
         <div class="row">
           <div class="col-md-3 footer-item">
             <h4>Finance Business</h4>
-            <p>Vivamus tellus mi. Nulla ne cursus elit,vulputate. Sed ne cursus augue hasellus lacinia sapien vitae.</p>
+           <!--  <p>Vivamus tellus mi. Nulla ne cursus elit,vulputate. Sed ne cursus augue hasellus lacinia sapien vitae.</p> -->
             <ul class="social-icons">
               <li><a rel="nofollow" href="https://fb.com/templatemo" target="_blank"><i class="fa fa-facebook"></i></a></li>
               <li><a href="#"><i class="fa fa-twitter"></i></a></li>
@@ -287,7 +287,7 @@ https://templatemo.com/tm-545-finance-business
               <li><a href="#"><i class="fa fa-behance"></i></a></li>
             </ul>
           </div>
-          <div class="col-md-3 footer-item">
+          <!-- <div class="col-md-3 footer-item">
             <h4>Useful Links</h4>
             <ul class="menu-list">
               <li><a href="#">Vivamus ut tellus mi</a></li>
@@ -296,7 +296,7 @@ https://templatemo.com/tm-545-finance-business
               <li><a href="#">Cursus augue hasellus</a></li>
               <li><a href="#">Lacinia ac sapien</a></li>
             </ul>
-          </div>
+          </div> -->
           <div class="col-md-3 footer-item">
             <h4>Additional Pages</h4>
             <ul class="menu-list">
@@ -344,9 +344,9 @@ https://templatemo.com/tm-545-finance-business
       <div class="container">
         <div class="row">
           <div class="col-md-12">
-            <p>Copyright &copy; 2020 Financial Business Co., Ltd.
+            <p>Copyright &copy; 2021 Influence Capital
             
-            - Design: <a rel="nofollow noopener" href="https://templatemo.com" target="_blank">TemplateMo</a></p>
+            - Design: <a rel="nofollow noopener" href="#" target="_blank">Influence Capital</a></p>
           </div>
         </div>
       </div>
