--- a/contact.html
+++ b/contact.html
@@ -9,7 +9,7 @@
     <meta name="author" content="TemplateMo">
     <link href="https://fonts.googleapis.com/css?family=Poppins:100,200,300,400,500,600,700,800,900&display=swap" rel="stylesheet">
 
-    <title>Finance Business - Contact Page</title>
+    <title>Influence Capitals - Contact Page</title>
 
     <!-- Bootstrap core CSS -->
     <link href="vendor/bootstrap/css/bootstrap.min.css" rel="stylesheet">
@@ -85,7 +85,7 @@ https://templatemo.com/tm-545-finance-business
                 <a class="nav-link" href="contact.html">Contact Us</a>
               </li>
               <li class="nav-item">
-                <a class="nav-link" href="one-page.html">One Page</a>
+                <a class="nav-link" href="#">One Page</a>
               </li>
             </ul>
           </div>
@@ -112,7 +112,7 @@ https://templatemo.com/tm-545-finance-business
             <div class="contact-item">
               <i class="fa fa-phone"></i>
               <h4>Phone</h4>
-              <p>Vivamus ut tellus mi. Nulla nec cursus elit, id vulputate nec cursus augue.</p>
+             <!--  <p>Vivamus ut tellus mi. Nulla nec cursus elit, id vulputate nec cursus augue.</p> -->
               <a href="#">090-080-0760</a>
             </div>
           </div>
@@ -120,7 +120,7 @@ https://templatemo.com/tm-545-finance-business
             <div class="contact-item">
               <i class="fa fa-envelope"></i>
               <h4>Email</h4>
-              <p>Vivamus ut tellus mi. Nulla nec cursus elit, id vulputate nec cursus augue.</p>
+              <!-- <p>Vivamus ut tellus mi. Nulla nec cursus elit, id vulputate nec cursus augue.</p> -->
               <a href="#">info@company.com</a>
             </div>
           </div>
@@ -128,7 +128,7 @@ https://templatemo.com/tm-545-finance-business
             <div class="contact-item">
               <i class="fa fa-map-marker"></i>
               <h4>Location</h4>
-              <p>1020 New Mountain Street<br>Forest Park, FP 11220</p>
+              <!-- <p>1020 New Mountain Street<br>Forest Park, FP 11220</p> -->
               <a href="#">View on Google Maps</a>
             </div>
           </div>
@@ -142,7 +142,7 @@ https://templatemo.com/tm-545-finance-business
           <div class="col-md-12">
             <div class="section-heading">
               <h2>Send us a <em>message</em></h2>
-              <span>Suspendisse a ante in neque iaculis lacinia</span>
+             <!--  <span>Suspendisse a ante in neque iaculis lacinia</span> -->
             </div>
           </div>
           <div class="col-md-12">
@@ -213,7 +213,7 @@ https://templatemo.com/tm-545-finance-business
         <div class="row">
           <div class="col-md-3 footer-item">
             <h4>Finance Business</h4>
-            <p>Vivamus tellus mi. Nulla ne cursus elit,vulputate. Sed ne cursus augue hasellus lacinia sapien vitae.</p>
+           <!--  <p>Vivamus tellus mi. Nulla ne cursus elit,vulputate. Sed ne cursus augue hasellus lacinia sapien vitae.</p> -->
             <ul class="social-icons">
               <li><a rel="nofollow" href="https://fb.com/templatemo" target="_blank"><i class="fa fa-facebook"></i></a></li>
               <li><a href="#"><i class="fa fa-twitter"></i></a></li>
@@ -221,7 +221,7 @@ https://templatemo.com/tm-545-finance-business
               <li><a href="#"><i class="fa fa-behance"></i></a></li>
             </ul>
           </div>
-          <div class="col-md-3 footer-item">
+         <!--  <div class="col-md-3 footer-item">
             <h4>Useful Links</h4>
             <ul class="menu-list">
               <li><a href="#">Vivamus ut tellus mi</a></li>
@@ -230,7 +230,7 @@ https://templatemo.com/tm-545-finance-business
               <li><a href="#">Cursus augue hasellus</a></li>
               <li><a href="#">Lacinia ac sapien</a></li>
             </ul>
-          </div>
+          </div> -->
           <div class="col-md-3 footer-item">
             <h4>Additional Pages</h4>
             <ul class="menu-list">
@@ -278,9 +278,9 @@ https://templatemo.com/tm-545-finance-business
       <div class="container">
         <div class="row">
           <div class="col-md-12">
-            <p>Copyright &copy; 2020 Financial Business Co., Ltd.
+            <p>Copyright &copy; 2021 Influence Capital
             
-            - Design: <a rel="nofollow noopener" href="https://templatemo.com" target="_blank">TemplateMo</a></p>
+            - Design: <a rel="nofollow noopener" href="#" target="_blank">Influence Capital</a></p>
           </div>
         </div>
       </div>
