--- a/index.html
+++ b/index.html
@@ -93,7 +93,7 @@ html {
                 <a class="nav-link" href="contact.html">Contact Us</a>
               </li>
               <li class="nav-item">
-                <a class="nav-link" href="one-page.html">One Page</a>
+                <a class="nav-link" href="#">One Page</a>
               </li>
             </ul>
           </div>
@@ -110,9 +110,9 @@ html {
             <div class="img-fill">
                 <div class="text-content">
                   <!-- <h6>we are ready to help you</h6> -->
-                  <h6 style="color: #000;">Power lasts ten years, <br>influence more than a <br>lifetime. 
-                    Influence Capital, <br>an asset more valuable <br>than prime.
-                    Monetizing <br>the influence is the need <br>of our time.</h6>
+                  <h4>Power lasts ten years, <br>influence more than a <br>lifetime. 
+                    Influence <br>Capital, an asset more <br>valuable than prime.
+                    <br>Monetizing the influence <br>is the need of our time.</h4>
                   <!-- <p>This finance HTML template is 100% free of charge provided by TemplateMo for everyone. This is a multiple-page version with different HTML pages. <a href="one-page.html">One-page version</a> is available as of 2021 February.</p> -->
                   <!-- <a href="contact.html" class="filled-button">contact us</a> -->
                 </div>
@@ -120,7 +120,7 @@ html {
           </div>
           <!-- // Item -->
           <!-- Item -->
-          <div class="item item-2">
+          <!-- <div class="item item-2">
             <div class="img-fill">
                 <div class="text-content">
                   <h6>we are here to support you</h6>
@@ -129,10 +129,10 @@ html {
                   <a href="services.html" class="filled-button">our services</a>
                 </div>
             </div>
-          </div>
+          </div> -->
           <!-- // Item -->
           <!-- Item -->
-          <div class="item item-3">
+          <!-- <div class="item item-3">
             <div class="img-fill">
                 <div class="text-content">
                   <h6>we have a solid background</h6>
@@ -140,7 +140,7 @@ html {
                   <p>You can download, edit and use this layout for your business website. Phasellus lacinia ac sapien vitae dapibus. Mauris ut dapibus velit cras interdum nisl ac urna tempor mollis.</p>
                   <a href="about.html" class="filled-button">learn more</a>
                 </div>
-            </div>
+            </div> -->
           </div>
           <!-- // Item -->
         </div>
@@ -152,7 +152,7 @@ html {
         <div class="row">
           <div class="col-md-8">
             <h4>Request a call back right now ?</h4>
-            <span>Mauris ut dapibus velit cras interdum nisl ac urna tempor mollis.</span>
+           <!--  <span>Mauris ut dapibus velit cras interdum nisl ac urna tempor mollis.</span> -->
           </div>
           <div class="col-md-4">
             <a href="contact.html" class="border-button">Contact Us</a>
@@ -167,35 +167,35 @@ html {
           <div class="col-md-12">
             <div class="section-heading">
               <h2>Financial <em>Services</em></h2>
-              <span>Aliquam id urna imperdiet libero mollis hendrerit</span>
+             <!--  <span>Aliquam id urna imperdiet libero mollis hendrerit</span> -->
             </div>
           </div>
           <div class="col-md-4">
             <div class="service-item">
-              <img src="assets/images/service_021.jpg" alt="">
+             <!--  <img src="assets/images/service_021.jpg" alt=""> -->
               <div class="down-content">
                 <h4>Digital Currency</h4>
-                <p>Sed tincidunt dictum lobortis. Aenean tempus diam vel augue luctus dignissim. Nunc ornare leo tortor.</p>
+                <!-- <p>Sed tincidunt dictum lobortis. Aenean tempus diam vel augue luctus dignissim. Nunc ornare leo tortor.</p> -->
                 <a href="" class="filled-button">Read More</a>
               </div>
             </div>
           </div>
           <div class="col-md-4">
             <div class="service-item">
-              <img src="assets/images/service_021.jpg" alt="">
+              <!-- <img src="assets/images/service_021.jpg" alt=""> -->
               <div class="down-content">
                 <h4>Market Analysis</h4>
-                <p>Sed tincidunt dictum lobortis. Aenean tempus diam vel augue luctus dignissim. Nunc ornare leo tortor.</p>
+                <!-- <p>Sed tincidunt dictum lobortis. Aenean tempus diam vel augue luctus dignissim. Nunc ornare leo tortor.</p> -->
                 <a href="" class="filled-button">Read More</a>
               </div>
             </div>
           </div>
           <div class="col-md-4">
             <div class="service-item">
-              <img src="assets/images/service_021.jpg" alt="">
+              <!-- <img src="assets/images/service_021.jpg" alt=""> -->
               <div class="down-content">
                 <h4>Historical Data</h4>
-                <p>Sed tincidunt dictum lobortis. Aenean tempus diam vel augue luctus dignissim. Nunc ornare leo tortor.</p>
+              <!--   <p>Sed tincidunt dictum lobortis. Aenean tempus diam vel augue luctus dignissim. Nunc ornare leo tortor.</p> -->
                 <a href="" class="filled-button">Read More</a>
               </div>
             </div>
@@ -274,14 +274,14 @@ html {
         <div class="row">
           <div class="col-md-6">
             <div class="left-content">
-              <span>Lorem ipsum dolor sit amet</span>
+              <!-- <span>Lorem ipsum dolor sit amet</span> -->
               <h2>Our solutions for your <em>business growth</em></h2>
-              <p>Pellentesque ultrices at turpis in vestibulum. Aenean pretium elit nec congue elementum. Nulla luctus laoreet porta. Maecenas at nisi tempus, porta metus vitae, faucibus augue. 
-              <br><br>Fusce et venenatis ex. Quisque varius, velit quis dictum sagittis, odio velit molestie nunc, ut posuere ante tortor ut neque.</p>
+              <!-- <p>Pellentesque ultrices at turpis in vestibulum. Aenean pretium elit nec congue elementum. Nulla luctus laoreet porta. Maecenas at nisi tempus, porta metus vitae, faucibus augue. 
+              <br><br>Fusce et venenatis ex. Quisque varius, velit quis dictum sagittis, odio velit molestie nunc, ut posuere ante tortor ut neque.</p> -->
               <a href="" class="filled-button">Read More</a>
             </div>
           </div>
-          <div class="col-md-6 align-self-center">
+         <!--  <div class="col-md-6 align-self-center">
             <div class="row">
               <div class="col-md-6">
                 <div class="count-area-content">
@@ -308,7 +308,7 @@ html {
                 </div>
               </div>
             </div>
-          </div>
+          </div> -->
         </div>
       </div>
     </div>
@@ -328,7 +328,7 @@ html {
                   <div class="right-content">
                     <span>Who we are</span>
                     <h2>Get to know about <em>our company</em></h2>
-                    <p>Curabitur pulvinar sem a leo tempus facilisis. Sed non sagittis neque. Nulla conse quat tellus nibh, id molestie felis sagittis ut. Nam ullamcorper tempus ipsum in cursus<br><br>Praes end at dictum metus. Morbi id hendrerit lectus, nec dapibus ex. Etiam ipsum quam, luctus eu egestas eget, tincidunt</p>
+                    <!-- <p>Curabitur pulvinar sem a leo tempus facilisis. Sed non sagittis neque. Nulla conse quat tellus nibh, id molestie felis sagittis ut. Nam ullamcorper tempus ipsum in cursus<br><br>Praes end at dictum metus. Morbi id hendrerit lectus, nec dapibus ex. Etiam ipsum quam, luctus eu egestas eget, tincidunt</p> -->
                     <a href="#" class="filled-button">Read More</a>
                   </div>
                 </div>
@@ -339,7 +339,7 @@ html {
       </div>
     </div>
 
-    <div class="testimonials">
+    <!-- <div class="testimonials">
       <div class="container">
         <div class="row">
           <div class="col-md-12">
@@ -391,17 +391,17 @@ html {
           </div>
         </div>
       </div>
-    </div>
+    </div> -->
 
     <div class="callback-form">
       <div class="container">
         <div class="row">
-          <div class="col-md-12">
+          <!-- <div class="col-md-12">
             <div class="section-heading">
               <h2>Request a <em>call back</em></h2>
               <span>Etiam suscipit ante a odio consequat</span>
             </div>
-          </div>
+          </div> -->
           <div class="col-md-12">
             <div class="contact-form">
               <form id="contact" action="" method="post">
@@ -439,7 +439,7 @@ html {
       </div>
     </div>
 
-    <div class="partners">
+   <!--  <div class="partners">
       <div class="container">
         <div class="row">
           <div class="col-md-12">
@@ -470,15 +470,14 @@ html {
         </div>
       </div>
     </div>
-
-
+ -->
     <!-- Footer Starts Here -->
     <footer>
       <div class="container">
         <div class="row">
           <div class="col-md-3 footer-item">
             <h4>Finance Business</h4>
-            <p>Vivamus tellus mi. Nulla ne cursus elit,vulputate. Sed ne cursus augue hasellus lacinia sapien vitae.</p>
+            <!-- <p>Vivamus tellus mi. Nulla ne cursus elit,vulputate. Sed ne cursus augue hasellus lacinia sapien vitae.</p> -->
             <ul class="social-icons">
               <li><a rel="nofollow" href="https://fb.com/templatemo" target="_blank"><i class="fa fa-facebook"></i></a></li>
               <li><a href="#"><i class="fa fa-twitter"></i></a></li>
@@ -486,7 +485,7 @@ html {
               <li><a href="#"><i class="fa fa-behance"></i></a></li>
             </ul>
           </div>
-          <div class="col-md-3 footer-item">
+          <!-- <div class="col-md-3 footer-item">
             <h4>Useful Links</h4>
             <ul class="menu-list">
               <li><a href="#">Vivamus ut tellus mi</a></li>
@@ -495,7 +494,7 @@ html {
               <li><a href="#">Cursus augue hasellus</a></li>
               <li><a href="#">Lacinia ac sapien</a></li>
             </ul>
-          </div>
+          </div> -->
           <div class="col-md-3 footer-item">
             <h4>Additional Pages</h4>
             <ul class="menu-list">
@@ -543,9 +542,9 @@ html {
       <div class="container">
         <div class="row">
           <div class="col-md-12">
-            <p>Copyright &copy; 2020 Financial Business Co., Ltd.
+            <p>Copyright &copy; 2021 Influence Capital
             
-            - Design: <a rel="nofollow noopener" href="https://templatemo.com" target="_blank">TemplateMo</a></p>
+            - Design: <a rel="nofollow noopener" href="#" target="_blank">Influence Capital</a></p>
           </div>
         </div>
       </div>
