--- a/about.html
+++ b/about.html
@@ -143,31 +143,31 @@ https://templatemo.com/tm-545-finance-business
           </div>
           <div class="col-md-4">
             <div class="team-item">
-              <img src="assets/images/team_01.jpg" alt="">
+              <img src="assets/images/drfazal.png" alt="">
               <div class="down-content">
-                <h4>William Smith</h4>
-                <span>Co-Founder</span>
-               <!--  <p>In sem sem, dapibus non lacus auctor, ornare sollicitudin lacus. Aliquam ipsum urna, semper quis.</p> -->
+                <h4>Dr. Fazal Raheman</h4>
+                <span>MD, Inventor.Chairman</span>
+                <p>Serial entrepreneur, inventor, owns several health/ICT/ cybersecurity IPs.For patents check: https://www.bc5.eu/DrFazal-Patents/</p>
               </div>
             </div>
           </div>
           <div class="col-md-4">
             <div class="team-item">
-              <img src="assets/images/team_02.jpg" alt="">
+              <img src="assets/images/david.png" alt="">
               <div class="down-content">
-                <h4>Mary Houston</h4>
-                <span>Chief Marketing Officer</span>
-                <!-- <p>In sem sem, dapibus non lacus auctor, ornare sollicitudin lacus. Aliquam ipsum urna, semper quis.</p> -->
+                <h4>DAVID BELL</h4>
+                <span>CEO</span>
+              <p>Blockchain investor, cofounder AlgoShare patent-pending trading technology, keynote speaker</p>
               </div>
             </div>
           </div>
           <div class="col-md-4">
             <div class="team-item">
-              <img src="assets/images/team_03.jpg" alt="">
+              <img src="assets/images/tejas.png" alt="">
               <div class="down-content">
-                <h4>Paul Walker</h4>
-                <span>Financial Analyst</span>
-                <!-- <p>In sem sem, dapibus non lacus auctor, ornare sollicitudin lacus. Aliquam ipsum urna, semper quis.</p> -->
+                <h4>TEJAS BHAGAT</h4>
+                <span>Project Manager</span>
+                 <p>Healthtech cofounder, EU Grant writer & coordinator, Engineering graduate with Gold Medal in Energy Engineering</p>
               </div>
             </div>
           </div>
