--- a/index.html
+++ b/index.html
@@ -109,10 +109,10 @@ html {
           <div class="item item-1">
             <div class="img-fill">
                 <div class="text-content">
-                  <!-- <h6>we are ready to help you</h6> -->
-                  <h4>Power lasts ten years, <br>influence more than a <br>lifetime. 
-                    Influence <br>Capital, an asset more <br>valuable than prime.
-                    <br>Monetizing the influence <br>is the need of our time.</h4>
+                 <h6>Power lasts ten years, <br>influence more than a <br>lifetime.</h6>
+                  <!-- <h4 style="text-align: left;">Power lasts ten years, <br>influence more than a <br>lifetime.</h4>  -->
+                   <h6 style="text-align: right;margin-top: -10px;">Influence Capital, <br>an asset more <br>valuable than prime.</h6>
+                    <h6 style="text-align: left;"><br><br><br><br><br>Monetizing the <br>influence is the <br>need of our time.</h6>
                   <!-- <p>This finance HTML template is 100% free of charge provided by TemplateMo for everyone. This is a multiple-page version with different HTML pages. <a href="one-page.html">One-page version</a> is available as of 2021 February.</p> -->
                   <!-- <a href="contact.html" class="filled-button">contact us</a> -->
                 </div>
